2008-10-12  Badlop  <badlop@process-one.net>

	* src/mod_proxy65/mod_proxy65.erl: Update so the listener starts
	correctly (EJAB-303)
	* src/mod_proxy65/mod_proxy65_service.erl: Likewise

	* src/ejabberd_app.erl: Start listeners explicitely at server
	start after everything else (EJAB-303). Implement support in
	ejabberd for 'independent listeners', which handle their
	connections themselves: gen_tcp:listen, etc.
	* src/ejabberd_listener.erl: Likewise
	* src/ejabberd_socket.erl: Likewise
	* src/ejabberd_sup.erl: Likewise

2008-10-07  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: uncomment pubsub_publish_item hook
	call (EJAB-765)

2008-10-07  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_roster_odbc.erl: fix MySQL multiple requests issue.

2008-10-06  Badlop  <badlop@process-one.net>

	* doc/guide.html: Regenerated

2008-10-06  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_rdbms.erl: fix SQL database reconnection
	issues (EJAB-764) and add odbc_start_interval configuration
	directive (default to 30 seconds).
	* src/odbc/ejabberd_odbc.erl: likewise.
	* src/odbc/ejabberd_odbc_sup.erl: likewise.
	* doc/guide.tex: likewise.

2008-10-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/odbc/odbc_queries.erl: Fix empty query that fail on MySQL.

2008-10-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/mod_vcard_odbc: added vCard support for MS SQL Server 2005.
	* src/odbc/odbc_queries.erl: likewise.
	* src/odbc/mssql2005.sql: likewise.

2008-10-01  Mickael Remond  <mremond@process-one.net>

	* src/mod_shared_roster.erl: Correct roster push when changing
	a shared roster entry name (EJAB-738).

2008-09-30  Badlop  <badlop@process-one.net>

	* src/*/Makefile.win32: Provide explicit beam filenames because
	nmake does not accept wildcards (thanks to Attila
	Vangel)(EJAB-543)

2008-09-24  Christophe Romain  <christophe.romain@process-one.net>
